[gd_scene load_steps=2 format=3 uid="uid://o2w6vlld31yd"]

[ext_resource type="Script" path="res://addons/mattoha_lobby_system/gd_demo_example/scenes/lobby.gd" id="1_j33pg"]

[node name="Lobby" type="Control" node_paths=PackedStringArray("LobbyName", "PlayersContainer", "ChatInput", "MessagesContainer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j33pg")
LobbyName = NodePath("PanelContainer/MarginContainer/VBoxContainer/TopBar/LobbyNameLabel")
PlayersContainer = NodePath("PanelContainer/MarginContainer/VBoxContainer/Content/PlayersScrollContainer/PlayersContainer")
ChatInput = NodePath("PanelContainer/MarginContainer/VBoxContainer/BottomBar/MessageLineEdit")
MessagesContainer = NodePath("PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection/MarginContainer/VBoxContainer/ScrollContainer/MessagesContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RandomNameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
focus_mode = 0
text = "Random Lobby Name"

[node name="RefreshLobbyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
focus_mode = 0
text = "Refresh"

[node name="LobbyNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Lobby Name"

[node name="Team1Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
focus_mode = 0
text = "Team1"

[node name="Team2Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
focus_mode = 0
text = "Team2"

[node name="RefreshPlayersButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
focus_mode = 0
text = "Refresh Players"

[node name="Content" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatSection" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Chat:"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/ChatSection/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayersScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayersContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/PlayersScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MessageLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/BottomBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter a message ..."

[node name="TeamMessageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
focus_mode = 0
text = "Team message"

[node name="LobbyMessageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
focus_mode = 0
text = "Lobby Message"

[node name="GlobalMessageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
focus_mode = 0
text = "Global Message"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "START GAME"

[node name="LeaveLobbyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "LEAVE LOBBY"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/RandomNameButton" to="." method="_on_random_name_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/RefreshLobbyButton" to="." method="_on_refresh_lobby_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/Team1Button" to="." method="_on_team_1_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/Team2Button" to="." method="_on_team_2_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/RefreshPlayersButton" to="." method="_on_refresh_players_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomBar/TeamMessageButton" to="." method="_on_team_message_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomBar/LobbyMessageButton" to="." method="_on_lobby_message_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomBar/GlobalMessageButton" to="." method="_on_global_message_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeaveLobbyButton" to="." method="_on_leave_lobby_button_pressed"]
